# occ-visualizer

./: .gitignore  README.md  colormaps.py  data_layout.py  extract_from_view_image.py  merge_image_sequence.py  merge_png_sequence.py  occupancy_visualizer.py  pipeline.py  pyproject.toml  render_occ_npz_sequence.py  run_all_clips.py  utils.py
examples/: example_moving_occ_sequence.py  example_single_occ_interactive.py
