[project]
name = "occ-visualizer"
version = "0.1.0"
description = "Utilities for rendering occupancy grids and merging PNG sequences into MP4 videos"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26.4,<2",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "pillow>=12.1.0",
    "vtk==9.3.1",
    "mayavi==4.8.3",
    "pyvirtualdisplay>=3.0; platform_system != 'Windows'",
]

[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.uv.extra-build-dependencies]
mayavi = [
    "vtk==9.3.1",
    "setuptools>=81,<82",
]